[gd_scene load_steps=12 format=3 uid="uid://dhv37owtakstt"]

[ext_resource type="Script" path="res://Scripts/Boss.gd" id="1_fpt2s"]
[ext_resource type="Texture2D" uid="uid://catalkaead83t" path="res://assets/Enemies/Boss.png" id="2_abven"]
[ext_resource type="AudioStream" uid="uid://cd084te74cde5" path="res://assets/Sound/lasergun.mp3" id="3_4b0lf"]
[ext_resource type="AudioStream" uid="uid://dnmflrvuln080" path="res://assets/Sound/hit.mp3" id="4_ouunf"]

[sub_resource type="AtlasTexture" id="AtlasTexture_d2t21"]
atlas = ExtResource("2_abven")
region = Rect2(0, 0, 103, 133)

[sub_resource type="AtlasTexture" id="AtlasTexture_fplnk"]
atlas = ExtResource("2_abven")
region = Rect2(103, 0, 103, 133)

[sub_resource type="AtlasTexture" id="AtlasTexture_u8owd"]
atlas = ExtResource("2_abven")
region = Rect2(206, 0, 103, 133)

[sub_resource type="AtlasTexture" id="AtlasTexture_hn8bj"]
atlas = ExtResource("2_abven")
region = Rect2(309, 0, 103, 133)

[sub_resource type="AtlasTexture" id="AtlasTexture_g771p"]
atlas = ExtResource("2_abven")
region = Rect2(412, 0, 103, 133)

[sub_resource type="SpriteFrames" id="SpriteFrames_yhvf7"]
animations = [{
"frames": [{
"duration": 1.0,
"texture": SubResource("AtlasTexture_d2t21")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_fplnk")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_u8owd")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_hn8bj")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_g771p")
}],
"loop": true,
"name": &"default",
"speed": 5.0
}]

[sub_resource type="CircleShape2D" id="CircleShape2D_sf3xy"]
radius = 21.8403

[node name="Boss" type="CharacterBody2D"]
scale = Vector2(2, 2)
motion_mode = 1
wall_min_slide_angle = 0.0
script = ExtResource("1_fpt2s")

[node name="NavigationAgent2D" type="NavigationAgent2D" parent="."]
target_desired_distance = 20.0
navigation_layers = 3
debug_enabled = true

[node name="Timer" type="Timer" parent="."]
wait_time = 0.1
autostart = true

[node name="AnimatedSprite2D" type="AnimatedSprite2D" parent="."]
scale = Vector2(0.5, 0.5)
sprite_frames = SubResource("SpriteFrames_yhvf7")
frame = 1
frame_progress = 0.391793

[node name="CollisionShape2D" type="CollisionShape2D" parent="."]
position = Vector2(0.5, 6)
shape = SubResource("CircleShape2D_sf3xy")

[node name="AudioStreamPlayer2D" type="AudioStreamPlayer2D" parent="."]
stream = ExtResource("3_4b0lf")
volume_db = -15.0

[node name="AudioStreamPlayer2D2" type="AudioStreamPlayer2D" parent="."]
stream = ExtResource("4_ouunf")
volume_db = -20.0

[node name="DroneTimer" type="Timer" parent="."]
wait_time = 2.5
autostart = true

[connection signal="timeout" from="Timer" to="." method="_on_timer_timeout"]
[connection signal="timeout" from="DroneTimer" to="." method="_on_drone_timer_timeout"]
